--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,7 @@
     "express": "4.18.2",
     "express-fileupload": "^1.4.0",
     "express-session": "1.17.3",
-    "font-awesome": "4.5",
+    "font-awesome": "^4.5.0",
     "fs-extra": "11.1.1",
     "i18next": "22.5.1",
     "i18next-fs-backend": "2.1.3",
