--- a/server/dockerfile
+++ b/server/dockerfile
@@ -11,13 +11,14 @@ COPY package*.json ./
 RUN npm install
 
 COPY tsconfig.json ./
+COPY config.json ./
 
 
 # Copy the rest of the client code to the container
 COPY . .
 
 # Expose the port your client application is running on
-EXPOSE 3000
+# EXPOSE 8000
 
 # Command to start your client application
 CMD ["npm", "start"]
