--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       POSTGRES_DB: contenti_database
     volumes:
       - pgdata:/var/lib/postgresql/data # Persist data using a named volume
+    networks:
+      - my_network
 
 volumes:
   pgdata: # Define the named volume to persist PostgreSQL data
