fixed the docker compose related issues, mainly the proxy forwarding and the promp api call which still needs to be generalised to other content types

--- a/server/config.json
+++ b/server/config.json
@@ -19,8 +19,8 @@
   },
   "libraryConfig": {
     "H5P.ShareDBTest": {
-      "serverUrl": "ws://localhost:8080/shared-state",
-      "auth": "http://localhost:8080/auth-data"
+      "serverUrl": "ws://server:8080/shared-state",
+      "auth": "http://server:8080/auth-data"
     }
   }
 }
